# ICFP

./: .gitignore  README.md
2006/basic/: arith.adv  hack.bas  passwords.txt
2006/data/ftd/: README
2006/data/ohmega/: raytrace.spec
2006/ftd/: TODO  score.txt
2006/impl/asp_net_mvc4/: asp_net_mvc4.sln
2006/impl/c++/: CMakeLists.txt  Doxyfile  Makefile  Um.pro
2006/impl/c++11/: BUCK  CMakeLists.txt  README.md
2006/impl/c++11/src/: MemoryArray.cpp  MemoryArray.h  ScrollLoader.cpp  ScrollLoader.h  UM.cpp  UM.h  main.cpp
2006/impl/c++_new/: CMakeLists.txt  main.cpp
2006/impl/d/: main  main.d
2006/impl/f_sharp/: UM.sln
2006/impl/java/: build.xml
2006/impl/java_script/: cpu.js  index.html  look_and_feel.css  memory.js  util.js
2006/impl/js/: cpu.js
2006/impl/js_mvc2/: js_mvc2.sln
2006/impl/mono/: Program.cs  Um.csproj  Um.sln
2006/ohmega/: mult.spec  plus.2d  reverse.spec
2006/source/: codex.umz.key
2007/impl/: Endo.sln
2007/impl/Common/: Common.csproj  Guard.cs  RoapList.cs
2007/impl/Common_UT/: Common_UT.csproj  RoapList_UT.cs
2007/impl/DNAProcessor/: Class1.cs  DNA.csproj  DNAProcessor.csproj  DNAProcessor.sln  Endo.sln
2007/impl/Dna/: Dna.csproj  Processor.cs
2007/impl/DnaToRnaRunner/: DnaToRnaRunner.csproj  Helper.cs  Program.cs
2007/impl/c++/runDNA/: CMakeLists.txt
2007/impl/c++/runDNA/Sources/: base_seq.cpp  base_seq.h  config.h  main.cpp  main.h  pattern.cpp  pattern.h  seq_operation.cpp  seq_operation.h  template.cpp  template.h
2007/impl/c++/runDNA/nbproject/: Makefile-Default.mk  Makefile-impl.mk  configurations.xml  project.xml
2007/impl/c_sharp/: Endo.sln  prefix2.txt
2007/source/: test1.dna  test2.dna  test3.dna
2008/source/: Simulator.mht  linux2.6.24.tgz  livecd.tgz  no-gui-static.tgz  sample-maps.tgz
2009/impl/: ICFP.2009.sln  Impl.csproj  Impl.sln  Program.cs
2009/source/: ICFP 09 Programming Contest - 123.htm
(+194 files in other folders)
